--- a/static/main.css
+++ b/static/main.css
@@ -1,13 +1,13 @@
-body {
-    position: relative;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 14px;
-
-    width: 800px;
-    margin: 0 auto;
-    padding: 10px;
-    color: #333;
+.introduction {
+    display: block;
+    color: #222;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    text-decoration: none;
 }
+
 
 .login-area {
     font-size: 13px;
@@ -28,12 +28,6 @@ body {
 
 .login-link:hover {
     text-decoration: underline;
-}
-
-h2 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
 }
 
 .error {
@@ -95,7 +89,7 @@ input[type=text], input[type=password] {
 .main-title {
     display: block;
     color: #222;
-    font-size: 40px;
+    font-size: 200%;
     font-weight: bold;
     text-align: center;
     margin-bottom: 10px;
@@ -109,8 +103,9 @@ input[type=text], input[type=password] {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 30px;
     text-decoration: none;
+    margin-top: 1%;
+    margin-bottom: 1%;   
 }
 
 label.yesorno {
