completed. there is still some problems with text decoration but I think it it ok

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/responsive.css">
   <link type="text/css" rel="stylesheet" href="/static/main.css" />
-  <title>Wonjun - Math 447 Projects</title>
+  <title>Wonjun Lee - Math 447 Projects</title>
 </head>
 
 <body>
@@ -17,20 +17,11 @@
     <header class="row">
       <div class="col-xs-12">
         <a href="/" class="main-title">
-          Wonjun's Numerical Analysis Projects
+          Wonjun Lee's Numerical Analysis Projects
         </a>
       </div>
     </header>
 
-    <div class="login-area">
-      {% if user %}
-        {{user.name}} (<a class="login-link" href="/logout">logout</a>)
-      {% else %}
-        <a class="login-link" href="/login">login</a>
-        |
-        <a class="login-link" href="/signup">signup</a>
-      {% endif %}
-    </div>
     <hr>
     <div class="menu">
       <a href="/" class="menu-item">
