--- a/templates/matlabcode1.html
+++ b/templates/matlabcode1.html
@@ -46,9 +46,11 @@
 </div>
 
 <div class="row">
-<div class="col-xs-12 text-center">
-	<a href="/project1" class="main-button">
-		Go Back
-	</a>
+	<div class="col-xs-12 text-center">
+		<a href="/project/1" class="main-button">
+			Go Back
+		</a>
+	</div>
+</div>
 
 {% endblock %}
