--- a/templates/project0.html
+++ b/templates/project0.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 
+<br>
+
 <div class="row">
 	<div class="col-xs-12 text-center">
-		<h2>Project 0</h2>
+		<h2 class="text-uppercase">Project 0: Using SSH and HTML</h2>
 	</div>
 </div>
 
