--- a/templates/project1.html
+++ b/templates/project1.html
@@ -6,7 +6,7 @@
 
 <div class="row">
    <div class="col-xs-12 text-center">
-		<h2>Project 1: Kinematics of the Stewart platform</h2>
+		<h2 class="text-uppercase">Project 1: Kinematics of the Stewart platform</h2>
 	</div>
 </div>
 
@@ -64,7 +64,7 @@
 		<p>L1=2, L2=L3=sqrt(2), gamma=pi/2, p1=p2=p3=sqrt(5)</p>
 		<p>Using a bisection method, solutions are found and they are close to -pi/4 and pi/4.</p>
 		<p>theta=0.785397529602051, -0.785397529602051</p>
-		<a href="/project1/matlabcode1" class="main-button">Matlab code</a>
+		<a href="/project/1/matlabcode1" class="main-button">Matlab code</a>
 		<br>
 	</div>
 </div>
