--- a/templates/project2.html
+++ b/templates/project2.html
@@ -6,7 +6,8 @@
 
 <div class="row">
    <div class="col-xs-12 text-center">
-      <h2>Project 2: GPS, Conditioning, and Nonlinear Least Squares</h2>
+      <h2 class="text-uppercase">Project 2: GPS, Conditioning,</h2>
+      <h2 class="text-uppercase">and Nonlinear Least Squares</h2>
    </div>
 </div>
 
@@ -58,7 +59,7 @@
       <p>Set initial values (x_0, y_0, z_0, d_0) = (0, 0, 6370, 0, 0) </p>
       <p>Through multivariable Newton's method, we get (x, y, z, d) = (-41.7727, -16.7892, 0.0063701, -0.0032)</p>
 
-      <a href="http://mason.gmu.edu/~wlee10/pro2_matlab1.html" class="main-button">Matlab code</a>
+      <a href="/project/2/pro2matlab1" class="main-button">Matlab code</a>
 
    </div>
 </div>
@@ -543,6 +544,8 @@
       <img src="https://github.com/wonjunee/math-447-files/blob/master/project%202/project22_files/errorgraph.gif?raw=true" alt="errorgraph">
    </div>
 </div>
+
+<br>
 
 <div class="row">
    <div class="col-xs-12">
