--- a/templates/project3.html
+++ b/templates/project3.html
@@ -6,7 +6,7 @@
 
 <div class="row">
 	<div class="col-xs-12 text-center">
-		<h2>Project 3: Write a title!!</h2>
+		<h2 class="text-uppercase">Project 3: Write a title!!</h2>
 	</div>
 </div>
 
@@ -20,19 +20,27 @@
 
 
 <div class="row">
-   <div class="col-xs-12">
+   <div class="col-xs-12 text center">
 		<h3>Problem 5</h3>
 		<hr>
 		<p> Forced damped equation </p>
-		<img src="./project3_files/pro3_7.png" alt="Sine Graph" width="230" height="50"><p></p>
-
-
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3"></div>
+	<div class="col-xs-6">
+		<img src="https://github.com/wonjunee/math-447-files/blob/master/project%203/project3_files/pro3_7.png?raw=true" alt="pro3_7">
+	</div>
+	<div class="col-xs-3"></div>
+</div>
+<div class="row">
+   <div class="col-xs-12">
 		<br>
 
 		<h4 class="text-center">Initial Angle from 0 to 3.14 (increase by 0.01).</h4> 
 		<h4 class="text-center">Graph of x-position. </h4>
 
-		<object width="100%"><param name="movie" value="//www.youtube.com/v/OgomYO8c8Jg?hl=en_US&amp;version=3&amp;rel=0"><param name="allowFullScreen" value="true"><param name="allowscriptaccess" value="always"><embed src="//www.youtube.com/v/OgomYO8c8Jg?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="100%" allowscriptaccess="always" allowfullscreen="true"></object>
+		<iframe width="100%" height="315" src="https://www.youtube.com/embed/OgomYO8c8Jg" frameborder="0" allowfullscreen></iframe>
 				
 		<p>The graph shows the movement of ball as from time 0 to 4000.</p> <p>As you can see from the video, as an initial angle changes from 0 to 3.14, there is no typical pattern of the graph.</p> 
 		<p>In other words, this forced damped pendulum is chaotic.</p> 
@@ -41,11 +49,14 @@
 		<br>
 
 		<h4 class="text-center">Initial Angle: 0.93</h4>
-		<object width="100%"><param name="movie" value="//www.youtube.com/v/uBzjNKHOhUY?hl=en_US&amp;version=3&amp;rel=0"><param name="allowFullScreen" value="true"><param name="allowscriptaccess" value="always"><embed src="//www.youtube.com/v/uBzjNKHOhUY?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="100%" allowscriptaccess="always" allowfullscreen="true"></object>
+		<iframe width="100%" height="315" src="https://www.youtube.com/embed/uBzjNKHOhUY" frameborder="0" allowfullscreen></iframe>
 		<p>For this set of initial conditions, the distance the pendulum travels decreases as time goes on.</p> 
-		<p>The pendulum travels roughly half the distance each time. Each set of initial conditions end up reapeating the periodic behavior, so only 1 video is included.</p>
+		<p>The pendulum travels roughly half the distance each time.</p>
+		<p>Each set of initial conditions end up reapeating the periodic behavior, so only 1 video is included.</p>
 	</div>
 </div>
+
+<br>
 
 <div class="row">
    <div class="col-xs-12">
@@ -53,13 +64,33 @@
 		<hr>
 		<p> In this problem, the damped pendulum is modified with oscillating pivot.</p>
 		<p> The equation is modified as </p>
-		<img src="./project3_files/pro3_1.png" alt="Sine Graph">
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3"></div>
+	<div class="col-xs-6">
+		<img src="https://github.com/wonjunee/math-447-files/blob/master/project%203/project3_files/pro3_1.png?raw=true" alt="pro3_1">
+	</div>
+	<div class="col-xs-3"></div>
+</div>
+<div class="row">
+   <div class="col-xs-12">
 		where A is the forcing strength.</p>
 		<p> Set d = 0.1 a nd the length of the pendulum to be 2.5 meters.</p>
 		<p>In the absence of forcing A = 0, the downward pendulum y = 0 is a stable equilibrium, and the inverted pendulum y = pi is an unstable equilibrium.</p>
 		<p> Two examples are shown below. </p>
-		<img src="./project3_files/oscillatingpivota0y0.png" alt="Sine Graph">
-		<img src="./project3_files/oscillatingpivota0ypi.png" alt="Sine Graph">
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-6">
+		<img src="https://github.com/wonjunee/math-447-files/blob/master/project%203/project3_files/oscillatingpivota0y0.png?raw=true" alt="oscillatingpivota0y0" style="width:130%;margin-left:-15%">
+	</div>
+	<div class="col-xs-6">
+		<img src="https://github.com/wonjunee/math-447-files/blob/master/project%203/project3_files/oscillatingpivota0ypi.png?raw=true" alt="oscillatingpivota0ypi" style="width:130%;margin-left:-15%">
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-12">
 		<p> Two figures above show the moving pendulum when y = 0 and y= pi. </p>
 		<p> Videos show two balls at the same position for a whole time. </p>
 		<p> Downward pendulum at the left is a stable equilibrium. </p>
@@ -71,11 +102,11 @@
 <div class="row">
 	<div class="col-xs-6">
 		<h4 class="text-center">Unstable inverted pendulum</h4>
-		<object width="100%"><param name="movie" value="//www.youtube.com/v/hXQiToL0Zds?hl=en_US&amp;version=3&amp;rel=0"><param name="allowFullScreen" value="true"><param name="allowscriptaccess" value="always"><embed src="//www.youtube.com/v/hXQiToL0Zds?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="100%" allowscriptaccess="always" allowfullscreen="true"></object>
+		<iframe width="100%" height="250" src="https://www.youtube.com/embed/hXQiToL0Zds" frameborder="0" allowfullscreen></iframe>
 	</div>
 	<div class="col-xs-6">
 		<h4 class="text-center">Stable inverted pendulum</h4>
-		<object width="100%"><param name="movie" value="//www.youtube.com/v/igw8dsWswPE?version=3&amp;hl=en_US&amp;rel=0"><param name="allowFullScreen" value="true"><param name="allowscriptaccess" value="always"><embed src="//www.youtube.com/v/igw8dsWswPE?version=3&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" width="100%" allowscriptaccess="always" allowfullscreen="true"></object>
+		<iframe width="100%" height="250" src="https://www.youtube.com/embed/igw8dsWswPE" frameborder="0" allowfullscreen></iframe>
 	</div>
 </div>
 
@@ -88,11 +119,11 @@
 		<p> If the ball never goes downward throughout the whole time period, the function gives +1. </p>
 		<p> In conclusion, the range of parameter A was calculated as 18.333816137413876 &lt;= A &lt;= 25.677509645001138 </p>
 
-		<img src="./project3_files/pro3_twomovies.gif" alt="triproject1" width="800" height="310">
+		<img src="https://github.com/wonjunee/math-447-files/blob/master/project%203/project3_files/pro3_twomovies.gif?raw=true" alt="pro3_twomovies">
 
 		<br>
 		<h4 class="text-center">Matlab code</h4>
-		<a href="http://mason.gmu.edu/~wlee10/bisectpend.html" class="main-button">bisectpend.m</a>
+		<a href="/project/3/bisectpend" class="main-button">bisectpend.m</a>
 		<br>
 	</div>
 </div>
@@ -109,22 +140,27 @@
 		<p> As a result, the smallest value of A is 14.727873288228963. </p>
 		<br>
 		<h4 class="text-center">Matlab code</h4>
-		<a href="http://mason.gmu.edu/~wlee10/bisectpend2.html" class="main-button">bisectpend2.m</a>
+		<a href="/project/3/bisectpend2" class="main-button">bisectpend2.m</a>
 	</div>
 </div>
 
 <div class="row">
    <div class="col-xs-6">
    		<h4 class="text-center">Unstable downward pendulum</h4>
-   		<object width="100%"><param name="movie" value="//www.youtube.com/v/WFquc3jOgoI?hl=en_US&amp;version=3&amp;rel=0"><param name="allowFullScreen" value="true"><param name="allowscriptaccess" value="always"><embed src="//www.youtube.com/v/WFquc3jOgoI?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="100%" allowscriptaccess="always" allowfullscreen="true"></object>
+   		<iframe width="100%" height="315" src="https://www.youtube.com/embed/WFquc3jOgoI" frameborder="0" allowfullscreen></iframe>
    	</div>
    	<div class="col-xs-6">
 		<h4 class="text-center">Stable downward pendulum</h4>
-		<object width="100%"><param name="movie" value="//www.youtube.com/v/WaU0EPDdYjo?hl=en_US&amp;version=3&amp;rel=0"><param name="allowFullScreen" value="true"><param name="allowscriptaccess" value="always"><embed src="//www.youtube.com/v/WaU0EPDdYjo?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="100%" allowscriptaccess="always" allowfullscreen="true"></object>
+		<iframe width="100%" height="315" src="https://www.youtube.com/embed/WaU0EPDdYjo" frameborder="0" allowfullscreen></iframe>
 	</div>
 </div>
 
-<h3>Reference</h3>
-<p>Sauer, T. Numerical Analysis 2nd ed. Pearson</p>
+<div class="row">
+   <div class="col-xs-12">
+		<h3>Reference</h3>
+		<hr>
+		<p>Sauer, T. Numerical Analysis 2nd ed. Pearson</p>
+	</div>
+</div>
 
 {% endblock %}
