--- a/templates/project4.html
+++ b/templates/project4.html
@@ -5,7 +5,7 @@
 <br>
 <div class="row">
    <div class="col-xs-12 text-center">
-		<h2>Project 4: Heat Distribution on A Cooling Fin</h2>
+		<h2 class="text-uppercase">Project 4: Heat Distribution on A Cooling Fin</h2>
 	</div>
 </div>
 
@@ -36,36 +36,41 @@
 		<p> We are given that the fin has a size of 4 by 4 cm, and we are supposed to find the maximum power that can be dissipated by the fin while keeping the maximum temperature less than 80 degrees celcius.</p>
 
 		<br>
-
 		<h4 class="text-center"> When ambient temperature is 0 degree celcius. </h4>
 
 		<p> Figures on the left and right are showing a fin with K = 1.68 and K = 3.85 respectively. </p>
 
-
-		<p> 
-		<img src="./project4_files/powermaxtemp38522.png" alt="Sine Graph" width="1100" height="400"> </p>
+		<img src="https://github.com/wonjunee/math-447-files/blob/master/project%204/powermaxtemp38522.png?raw=true" alt="powermaxtemp38533">
 		<br>
-
-		<p> 
-		<img src="./project4_files/kmaxpmaxtemp2.png" alt="Sine Graph" width="600" height="400"> </p>
-
+		<div class="text-center">
+			<img src="https://github.com/wonjunee/math-447-files/blob/master/project%204/kmaxpmaxtemp2.png?raw=true" alt="kmaxpmaxtemp2" style="width:60%">
+		</div>
 
 		<p> The accurate maximum power can be calculated using a bisection method. </p>
 		<p> As a result the maximum power at K= 1.68 and K=3.68 are P = 8.085647142677885 W and P = 10.421668066290408 W respectively. </p>
 	</div>
 </div>
 
+<br>
+
 <div class="row">
    <div class="col-xs-12">
 		<h3>Problem 5</h3>
 		<hr>
-		<img src="./project4_files/kmaxpmaxtemp.png" alt="kmaxpmaxtemp">
-		<img src="./project4_files/kmaxpmaxtemp4.png" alt="kmaxpmaxtemp4">
+
+		<div class="col-xs-6">
+		<img src="https://github.com/wonjunee/math-447-files/blob/master/project%204/project4/project4_files/kmaxpmaxtemp.png?raw=true" alt="kmaxpmaxtemp">
+		</div>
+		<div class="col-xs-6">
+			<img src="https://github.com/wonjunee/math-447-files/blob/master/project%204/project4/project4_files/kmaxpmaxtemp4.png?raw=true" alt="kmaxpmaxtemp4">
+		</div>
 		<p> The figure above shows the maximum power that can be dissipated while keeping the maximum temperature below 80 degrees as a function of thermal conductivity K. </p>
 		<p> Each of values of power is found by using bisection method. </p>
 		<p> First figure is calculated from 10 x 10 grid size, and second one is from 30 x 30 grid size. </p>
 	</div>
 </div>
+
+<br>
 
 <div class="row">
    <div class="col-xs-12">
@@ -76,15 +81,18 @@
 	</div>
 </div>
 
+<br>
+
 <div class="row">
    <div class="col-xs-12">
-		<h3>Matlab codes</h4>
+		<h3>Matlab codes</h3>
 		<hr>
-		<a href="http://mason.gmu.edu/~wlee10/pro4poisson3.html" class="main-button">pro4poisson3.m</a>
-		<a href="http://mason.gmu.edu/~wlee10/project4bisect.html" class="main-button">project4bisect.m</a>
+		<a href="/project/4/pro4poisson3" class="main-button">pro4poisson3.m</a>
+		<a href="/project/4/project4bisect" class="main-button">project4bisect.m</a>
 	</div>
 </div>
 
+<br>
 
 <div class="row">
    <div class="col-xs-12">
