--- a/templates/bisectpend.html
+++ b/templates/bisectpend.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<head>
    <!--
 This HTML was auto-generated from MATLAB code.
 To make changes, update the MATLAB code and republish this document.
